# django-reversion-compare

./: .coveragerc  .coveralls.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .project  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.creole  README.html  README.md  README.rst  black.sh  create_env.sh  dev-shell.py  manage.py  manage.sh  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.dev.txt  requirements.django32.txt  requirements.django41.txt  requirements.django42.txt  requirements.django50.txt  requirements.django51.txt  requirements.txt  run_testserver.py  run_testserver.sh  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pythonapp.yml  tests.yml
.run/: Template Django tests.run.xml  Unittests - __all__.run.xml
reversion_compare/: __init__.py  admin.py  apps.py  compare.py  compare_raw.py  context_processors.py  dev_shell.py  forms.py  helpers.py  mixins.py  models.py  publish.py  reversion_api.py  tests.py  views.py
reversion_compare/locale/de/LC_MESSAGES/: django.mo  django.po
reversion_compare/locale/el/LC_MESSAGES/: django.mo  django.po
reversion_compare/locale/fi/LC_MESSAGES/: django.mo  django.po
reversion_compare/locale/fr/LC_MESSAGES/: django.mo  django.po
reversion_compare/locale/nl/LC_MESSAGES/: django.mo  django.po
reversion_compare/locale/pl/LC_MESSAGES/: django.mo  django.po
reversion_compare/static/: reversion_compare.css
reversion_compare/templates/reversion-compare/: action_list_partial.html  compare.html  compare_BooleanField.html  compare_generic_add.html  compare_generic_many_to_many.html  compare_generic_remove.html  compare_links_partial.html  compare_partial.html  compare_raw.html  object_history.html
reversion_compare/tests/: __init__.py  test_compare_raw.py  test_custom_model.py  test_django_countries.py  test_factory_car_models.py  test_factory_car_reverse_models.py  test_helpers.py  test_onetoone_field.py  test_person_pet_models.py  test_relations.py  test_simple_model.py  test_template_field_model.py  test_variant_model.py  test_variant_model_all_changes_django42_1.snapshot.html  test_variant_model_all_changes_django60_1.snapshot.html  test_view.py
reversion_compare/utils/: middleware.py
reversion_compare_project/: __init__.py  __main__.py  admin.py  djadmin.py  manage.py  middlewares.py  models.py  settings.py  urls.py  views.py  wsgi.py
reversion_compare_project/management/commands/: run_dev_server.py  update_req.py
reversion_compare_project/migrations/: 0001_initial.py  0002_registeredwithnotregisteredrelationmodel_and_more.py
reversion_compare_project/settings/: local.py  prod.py  tests.py
reversion_compare_project/templatetags/: own_detail_view_demo.py
reversion_compare_project/tests/: __init__.py  test_admin.py  test_project_setup.py  utils.py
reversion_compare_project/utils/: db_queries.py  fixtures.py  test_cases.py
reversion_compare_test_project/: README.creole  __init__.py  create_test_data.py  manage.py  reset.sh  runtests.py  settings.py  urls.py
reversion_compare_test_project/reversion_compare_test_app/: admin.py  middleware.py  models.py
reversion_compare_test_project/test_app/: models.py
reversion_compare_tests/: admin.py  manage.py  middleware.py  models.py  settings.py  test_basics.py  test_compare_raw.py  test_custom_model.py  test_django_countries.py  test_factory_car_models.py  test_factory_car_reverse_models.py  test_helpers.py  test_onetoone_field.py  test_person_pet_models.py  test_project_setup.py  test_simple_model.py  test_template_field_model.py  test_variant_model.py  test_view.py  urls.py  views.py
reversion_compare_tests/management/commands/: run_testserver.py
reversion_compare_tests/migrations/: 0001_initial.py  0002_migration_model_1.py  0003_migration_model_2.py
reversion_compare_tests/templates/admin/: base_site.html  index.html
reversion_compare_tests/templates/reversion_compare_tests/: simplemodel_detail.html
reversion_compare_tests/templatetags/: own_detail_view_demo.py
reversion_compare_tests/test_utils/: test_cases.py  test_data.py
reversion_compare_tests/utils/: __init__.py  db_queries.py  fixtures.py  test_cases.py
src/reversion/: admin.py  forms.py  helpers.py
src/reversion/templates/reversion/: compare.html  diff.html  object_history.html
tests/: admin.py  manage.py  models.py  settings.py  test_custom_model.py  test_factory_car_models.py  test_factory_car_reverse_models.py  test_onetoone_field.py  test_person_pet_models.py  test_settings.py  test_simple_model.py  test_variant_model.py  test_view.py  urls.py  views.py
tests/management/commands/: run_testserver.py
tests/test_utils/: __init__.py  test_cases.py  test_data.py
