[project]
name = "django-reversion-compare"
dynamic = ["version"]
description = "Add compare view to django-reversion for comparing two versions of a reversion model."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'django-reversion-compare@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    "django",  # https://docs.djangoproject.com
    "django-reversion",  # https://github.com/etianen/django-reversion
    "diff-match-patch",  # https://github.com/diff-match-patch-python/diff-match-patch
    #
    # We use rich.pretty.pretty_repr() for pretty format fallback:
    "rich",  # https://github.com/Textualize/rich
]
[dependency-groups]
dev = [
    "bx_django_utils",   # https://github.com/boxine/bx_django_utils
    "django-countries",  # https://github.com/SmileyChris/django-countries
    "model_bakery",  # https://github.com/model-bakers/model_bakery
    "requests-mock",  # https://github.com/jamielennox/requests-mock/
    "django-override-storage",  # https://github.com/danifus/django-override-storage
    "beautifulsoup4",   # https://pypi.org/project/beautifulsoup4/
    "freezegun",  # https://github.com/spulec/freezegun
    "colorlog",  # https://github.com/borntyping/python-colorlog
    "gunicorn",  # https://github.com/benoimyproject.wsgitc/gunicorn
    "django-debug-toolbar",  # http://django-debug-toolbar.readthedocs.io/en/stable/changes.html
    "manage_django_project>=0.10.0",  # https://github.com/jedie/manage_django_project
    "uv",  # https://github.com/astral-sh/uv
    "hatchling",  # https://github.com/pypa/hatch/tree/master/backend
    "tblib",   # https://github.com/ionelmc/python-tblib
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "ruff", # https://github.com/astral-sh/ruff
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "pre-commit",  # https://github.com/pre-commit/pre-commit
    "typeguard",  # https://github.com/agronholm/typeguard/
    "model_bakery",  # https://github.com/model-bakers/model_bakery
    "requests-mock",
    "django-override-storage",  # https://github.com/danifus/django-override-storage
]

[project.urls]
Documentation = "https://github.com/jedie/django-reversion-compare"
Source = "https://github.com/jedie/django-reversion-compare"


[project.scripts]
# Must be set in ./manage.py and PROJECT_SHELL_SCRIPT:
reversion_compare_project = "reversion_compare_project.__main__:main"

[manage_django_project]
module_name="reversion_compare_project"

# Django settings used for all commands except test/coverage/tox:
local_settings='reversion_compare_project.settings.local'

# Django settings used for test/coverage/tox commands:
test_settings='reversion_compare_project.settings.tests'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reversion_compare", "reversion_compare_project"]

[tool.hatch.version]
path = "reversion_compare/__init__.py"


[tool.cli_base]
version_module_name = "reversion_compare" # Used by "update-readme-history" pre-commit hook


[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[
#    "CVE-2019-8341", # Jinja2: Side Template Injection (SSTI)
]


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
exclude = [
    ".*/",
    "*/migrations/*"
]

[tool.ruff.lint]
preview = true  # Needed for some of the rules
extend-select = [
    "E", # pycodestyle: https://docs.astral.sh/ruff/rules/#error-e
    "I", # isort: https://docs.astral.sh/ruff/rules/#isort-i
]
ignore = [
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"


[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = '-m reversion_compare_project test --shuffle --parallel --buffer --verbosity 2'

[tool.coverage.report]
omit = ['.*', '*/tests/*', '*/migrations/*']
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests', 'migrations']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "02d64b0"
initial_date = 2023-04-06T11:01:20+02:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "managed-django-project"
applied_migrations = [
    "00fbc5d", # 2023-04-07T12:35:09+02:00
    "c1a9d97", # 2023-11-01T19:59:17+01:00
    "363c360", # 2023-12-16T19:37:39+01:00
    "a66e5ae", # 2024-01-16T19:13:13+01:00
    "1f3a70e", # 2024-05-21T21:22:39+02:00
    "935485b", # 2024-09-09T10:39:39+02:00
    "86b20b9", # 2025-09-22T21:43:37+02:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "django-reversion-compare@jensdiemer.de"
package_name = "reversion_compare"
package_version = "0.15.0"
package_description = "Add compare view to django-reversion for comparing two versions of a reversion model."
package_url = "https://github.com/jedie/django-reversion-compare"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"

